# nit

./: .gitignore  .pre-commit-config.yaml  ACTION.md  CLAUDE.md  Dockerfile  Dockerfile.test  PLAN.md  README.md  TODO.md  action.yml  coverage.json  mkdocs.yml  pyproject.toml
.github/: ACTION.md
.github/workflows/: build-binaries.yml  ci.yml  docs.yml  nit.yml  release.yml  trigger-examples.yml
.nit/: profile.json
.nit/history/: test_execution.jsonl
action/: action.yml  entrypoint.sh
docs/: EXAMPLES.md  PLAN.md  PUBLISHING_ACTION.md  RELEASE.md  TODO.md  contributing.md  index.md
docs/adapters/: coverage.md  documentation.md  e2e.md  index.md  unit-testing.md
docs/advanced/: custom-adapters.md  drift-detection.md  environment-variables.md  memory.md
docs/agents/: analyzers.md  builders.md  debuggers.md  index.md  pipelines.md  watchers.md
docs/ci/: github-action.md  monorepo.md  sharding.md
docs/cli/: commands.md  config-commands.md  index.md  memory-commands.md
docs/contributing/: release-process.md
docs/features/: security-analysis.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integrations/: dashboard.md  github.md  platform.md  sentry.md  slack.md
docs/llm/: index.md  modes.md  providers.md  token-budgets.md
docs/stylesheets/: extra.css
release/homebrew/: README.md
release/homebrew/Formula/: nit.rb
release/npm/: .npmignore  package.json  postinstall.js
release/scripts/: install.ps1  install.sh
src/nit/: __init__.py  auto_init.py  cli.py  cli_helpers.py  config.py  orchestrator.py  tui_init.py
src/nit/adapters/: __init__.py  base.py  registry.py
src/nit/adapters/coverage/: __init__.py  base.py  coverage_py_adapter.py  coverlet_adapter.py  gcov.py  go_cover_adapter.py  istanbul.py  jacoco.py  tarpaulin.py
src/nit/adapters/docs/: __init__.py  doxygen_adapter.py  godoc_adapter.py  jsdoc_adapter.py  mkdocs_adapter.py  rustdoc_adapter.py  sphinx_adapter.py  template_adapter.py  typedoc_adapter.py
src/nit/adapters/e2e/: __init__.py  auth.py  cypress_adapter.py  playwright_adapter.py
src/nit/adapters/mutation/: __init__.py  base.py  mutmut_adapter.py  pitest_adapter.py  stryker_adapter.py
src/nit/adapters/unit/: __init__.py  cargo_test_adapter.py  catch2_adapter.py  go_test_adapter.py  gtest_adapter.py  jest_adapter.py  junit5_adapter.py  kotest_adapter.py  mocha_adapter.py  pytest_adapter.py  template_adapter.py  testify_adapter.py  vitest_adapter.py  xunit_adapter.py
src/nit/agents/: base.py  replay.py
src/nit/agents/analyzers/: __init__.py  accessibility.py  bug.py  code.py  contract.py  coverage.py  database.py  diff.py  flow_mapping.py  graphql.py  integration_deps.py  mutation.py  openapi.py  pattern.py  risk.py  route_discovery.py  security.py  security_types.py  semantic_gap.py  snapshot.py  test_mapper.py
src/nit/agents/builders/: __init__.py  accessibility.py  api.py  contract.py  docs.py  e2e.py  graphql.py  infra.py  integration.py  migration.py  mutation.py  readme.py  snapshot.py  unit.py
src/nit/agents/debuggers/: __init__.py  fix_gen.py  fix_verify.py  root_cause.py  verifier.py
src/nit/agents/detectors/: __init__.py  dependency.py  framework.py  infra.py  llm_usage.py  signals.py  stack.py  workspace.py
src/nit/agents/healers/: __init__.py  self_healing.py
src/nit/agents/pipelines/: __init__.py  pick.py
src/nit/agents/reporters/: __init__.py  dashboard.py  github_comment.py  github_issue.py  github_pr.py  json_reporter.py  junit_xml.py  markdown_reporter.py  sarif.py  slack.py  terminal.py
src/nit/agents/watchers/: __init__.py  coverage.py  drift.py  drift_comparator.py  drift_test.py  file_watch_ui.py  file_watcher.py  schedule.py
src/nit/llm/: __init__.py  builtin.py  cli_adapter.py  config.py  context.py  engine.py  factory.py  prompt_analysis.py  tracked_engine.py  usage_callback.py
src/nit/llm/prompts/: __init__.py  accessibility_test_prompt.py  api_test_prompt.py  base.py  bug_analysis.py  cargo_test_prompt.py  catch2_prompt.py  changelog_prompt.py  contract_test_prompt.py  cypress_prompt.py  doc_generation.py  drift_analysis.py  (+21 more)
src/nit/memory/: __init__.py  analytics_collector.py  analytics_history.py  analytics_queries.py  conventions.py  drift_baselines.py  global_memory.py  helpers.py  package_memory.py  package_memory_manager.py  prompt_analytics.py  prompt_store.py  prompt_sync.py  store.py  sync.py
src/nit/models/: __init__.py  analytics.py  coverage.py  profile.py  profile_manager.py  prompt_record.py  route.py  store.py  test_result.py
src/nit/parsing/: __init__.py  treesitter.py
src/nit/sharding/: __init__.py  merger.py  parallel_runner.py  prioritizer.py  shard_result.py  splitter.py
src/nit/telemetry/: __init__.py  sentry_integration.py
src/nit/utils/: cache.py  changelog.py  ci_context.py  cmake.py  git.py  platform_client.py  prerequisites.py  readme.py  subprocess_runner.py
tests/: test_accessibility_analyzer.py  test_adapter_registry.py  test_agents.py  test_analytics_collector.py  test_analytics_history.py  test_analytics_queries.py  test_api_test_prompt.py  test_auto_init.py  test_bug_analysis_prompt.py  test_bug_analyzer.py  test_cache.py  test_cargo_test_adapter.py  test_catch2_adapter.py  test_changelog.py  test_ci_context.py  test_cli.py  test_cli_adapter.py  test_cli_helpers.py  test_cmake_integration.py  test_code_analyzer.py  test_config.py  test_context.py  test_context_assembler.py  test_contract_analyzer.py  test_coverage_analyzer.py  test_coverage_py_adapter.py  test_coverage_watcher.py  test_coverlet_adapter.py  test_csharp_parser.py  test_cypress_adapter.py  test_cypress_prompt.py  test_dashboard_reporter.py  test_database_analyzer.py  test_dependency_detector.py  test_diff_analyzer.py  test_doc_adapter_commands.py  test_doc_generation.py  test_docs_builder.py  test_doxygen_adapter.py  test_drift_analysis_prompt.py  (+112 more)
tests/integration/: conftest.py  test_adapter_lifecycle.py  test_detection_pipeline.py  test_memory_lifecycle.py
tests/memory/: test_global_memory.py  test_package_memory.py  test_store.py
(+25 files in other folders)
